fixed EOT and EOS2

--- a/EOTReminder/App.config
+++ b/EOTReminder/App.config
@@ -51,6 +51,18 @@
       <setting name="EOS2SecondAlertPath" serializeAs="String">
         <value />
       </setting>
+      <setting name="FirstAlertTefilaMinutes" serializeAs="String">
+        <value>30</value>
+      </setting>
+      <setting name="SecondAlertTefilaMinutes" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="EOT2FirstAlertPath" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="EOT2SecondAlertPath" serializeAs="String">
+        <value />
+      </setting>
     </EOTReminder.Properties.Settings>
   </userSettings>
 </configuration>
