the refactor start

--- a/EOTReminder/App.config
+++ b/EOTReminder/App.config
@@ -63,6 +63,45 @@
       <setting name="EOT2SecondAlertPath" serializeAs="String">
         <value />
       </setting>
+      <setting name="SunSetTenMin" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="SunSetThreeMin" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="SunSet" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="SunSetTenPath" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="SunSetThreePath" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="SunSetPath" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="SlideshowActivationIntervalSeconds" serializeAs="String">
+        <value>300</value>
+      </setting>
+      <setting name="SlideshowReturnIntervalSeconds" serializeAs="String">
+        <value>60</value>
+      </setting>
+      <setting name="SlideshowImageDisplaySeconds" serializeAs="String">
+        <value>3</value>
+      </setting>
+      <setting name="SlideshowTransitionType" serializeAs="String">
+        <value>"Fade"</value>
+      </setting>
+      <setting name="SlideshowImagesFolder" serializeAs="String">
+        <value>""</value>
+      </setting>
+      <setting name="SlideshowHeaderText" serializeAs="String">
+        <value>"Welcome — Slideshow"</value>
+      </setting>
+      <setting name="SlideshowEnabled" serializeAs="String">
+        <value>True</value>
+      </setting>
     </EOTReminder.Properties.Settings>
   </userSettings>
 </configuration>
